fixed projects-list gap

--- a/style.css
+++ b/style.css
@@ -125,12 +125,12 @@
 
 .projects-list {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   list-style: none;
   padding-top: 100px;
   padding-bottom: 100px;
   flex-wrap: wrap;
-  gap: 40px;
+  row-gap: 40px;
 }
 
 .projects-item {
